2022-10-31T08:09:24Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3359618065 # 579
* notice: last 14d: unq all: 4 5626
* notice: prev accum: outdated-unq outdated-all / unq all: 1174 78790 / 1204 84458
* notice: next accum: outdated-unq outdated-all / unq all: 1174 78790 / 1206 84416
* notice: prev exec diff / last date diff / accum: unq all: +2 +139 -0 -181 / +2 +139 -0 -0 / 2 139
* notice: removed / changed dates: [] / [2022-10-17 2022-10-31]

2022-10-31T00:39:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3357734254 # 578
* notice: last 14d: unq all: 4 5668
* notice: prev accum: outdated-unq outdated-all / unq all: 1172 78383 / 1204 83977
* notice: next accum: outdated-unq outdated-all / unq all: 1174 78790 / 1204 84458
* notice: prev exec diff / last date diff / accum: unq all: +0 +151 -0 -12 / +2 +414 -0 -0 / 2 414
* notice: removed / changed dates: [2022-10-16] / [2022-10-17 2022-10-30]

2022-10-30T16:04:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3356136650 # 577
* notice: last 14d: unq all: 4 5594
* notice: prev accum: outdated-unq outdated-all / unq all: 1172 78383 / 1204 84001
* notice: next accum: outdated-unq outdated-all / unq all: 1172 78383 / 1204 83977
* notice: prev exec diff / last date diff / accum: unq all: +0 +123 -0 -147 / +2 +263 -0 -0 / 2 263
* notice: removed / changed dates: [] / [2022-10-16 2022-10-30]

2022-10-30T08:07:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3354677645 # 576
* notice: last 14d: unq all: 4 5618
* notice: prev accum: outdated-unq outdated-all / unq all: 1172 78383 / 1202 84042
* notice: next accum: outdated-unq outdated-all / unq all: 1172 78383 / 1204 84001
* notice: prev exec diff / last date diff / accum: unq all: +2 +140 -0 -181 / +2 +140 -0 -0 / 2 140
* notice: removed / changed dates: [] / [2022-10-16 2022-10-30]