@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-31T08:09:24Z",
-  "count" : 206,
-  "count_minmax" : [ 137, 399 ],
-  "count_decinc" : [ -193, +399 ],
+  "timestamp" : "2022-10-31T16:03:53Z",
+  "count" : 64,
+  "count_minmax" : [ 64, 399 ],
+  "count_decinc" : [ -335, +399 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
