@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-31T08:09:24Z",
-  "count" : 139,
-  "count_minmax" : [ 139, 139 ],
-  "count_decinc" : [ -0, +139 ],
+  "timestamp" : "2022-10-31T16:03:53Z",
+  "count" : 260,
+  "count_minmax" : [ 139, 260 ],
+  "count_decinc" : [ -0, +260 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
