@@ -1,10 +1,10 @@
 {
-  "count": 5626,
+  "count": 5605,
   "uniques": 4,
   "clones": [
     {
       "timestamp": "2022-10-17T00:00:00Z",
-      "count": 206,
+      "count": 64,
       "uniques": 2
     },
     {
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2022-10-31T00:00:00Z",
-      "count": 139,
+      "count": 260,
       "uniques": 2
     }
   ]
