@@ -1,3 +1,11 @@
+2022-10-31T16:03:53Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3362799477 # 580
+* notice: last 14d: unq all: 4 5605
+* notice: prev accum: outdated-unq outdated-all / unq all: 1174 78790 / 1206 84416
+* notice: next accum: outdated-unq outdated-all / unq all: 1174 78790 / 1206 84395
+* notice: prev exec diff / last date diff / accum: unq all: +0 +121 -0 -142 / +2 +260 -0 -0 / 2 260
+* notice: removed / changed dates: [] / [2022-10-17 2022-10-31]
+
 2022-10-31T08:09:24Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3359618065 # 579
 * notice: last 14d: unq all: 4 5626
